# podcastcondensor

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  PLAN_fix_transcription_crashes.md  README.md  benchmark_models.py  benchmark_results.json  pyproject.toml  requirements.txt  setup.sh
output/: .gitignore  _themes.json  universe_state.json
output/ep-001/: decisions.json  source_subtitles.srt
output/ep-002/: decisions.json  source_subtitles.srt
output/ep-003/: decisions.json  source_subtitles.srt
output/ep-004/: decisions.json  source_subtitles.srt
output/ep-005/: decisions.json  source_subtitles.srt
output/ep-006/: decisions.json  source_subtitles.srt
output/ep-007/: decisions.json  source_subtitles.srt
output/ep-008/: decisions.json  source_subtitles.srt
output/ep-009/: decisions.json  source_subtitles.srt
output/ep-010/: decisions.json  source_subtitles.srt
output/ep-011/: decisions.json  source_subtitles.srt
output/ep-012/: decisions.json  source_subtitles.srt
output/ep-013/: decisions.json  source_subtitles.srt
output/ep-014/: decisions.json  source_subtitles.srt
output/ep-015/: decisions.json  source_subtitles.srt
output/ep-016/: decisions.json  (+1 more)
prompts/: classify_chunks.txt  classify_chunks_global.txt  classify_raw.txt  compress_episode.txt  extract_knowledge.txt  extract_knowledge_fast.txt  extract_themes.txt  global_state.txt  resolve_maybe.txt  summarize_block.txt  synthesize_outline.txt
tests/: test_audio_strategies.py  test_global_state.py  test_pipeline.py  test_segmentation.py  test_strategies.py  test_universe_state.py
(+71 files in other folders)
